# blog-api

./: db.sqlite3  pyproject.toml  render.yaml  requirements.txt
accounts/: admin.py  forms.py  models.py
accounts/migrations/: 0001_initial.py
django_project/: settings.py  urls.py
posts/: models.py  permissions.py  serializers.py  urls.py  views.py
posts/migrations/: 0001_initial.py  0002_alter_post_updated_at.py
