[tool.poetry]
name = "blog api"
version = "0.1.0"
description = ""
authors = ["Gokul <gokulakrishnan1996@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
asgiref = "3.5.2"
attrs = "22.1.0"
cachecontrol = "0.12.11"
cachy = "0.3.0"
certifi = "2022.12.7"
cffi = "1.15.1"
charset-normalizer = "2.1.1"
cleo = "1.0.0a5"
crashtest = "0.3.1"
cryptography = "38.0.4"
defusedxml = "0.7.1"
distlib = "0.3.6"
dj-database-url = "1.0.0"
dj-email-url = "1.0.6"
dj-rest-auth = "2.1.11"
django = "4.0.8"
django-allauth = "0.48.0"
django-cache-url = "3.4.2"
django-cors-headers = "3.10.1"
djangorestframework = "3.13.1"
drf-spectacular = "0.21.2"
dulwich = "0.20.50"
environs = "9.5.0"
filelock = "3.8.2"
gunicorn = "20.1.0"
html5lib = "1.1"
idna = "3.4"
importlib-metadata = "4.13.0"
inflection = "0.5.1"
jaraco-classes = "3.2.3"
jsonschema = "4.17.3"
keyring = "23.11.0"
lockfile = "0.12.2"
marshmallow = "3.19.0"
more-itertools = "9.0.0"
msgpack = "1.0.4"
oauthlib = "3.2.2"
packaging = "22.0"
pexpect = "4.8.0"
pkginfo = "1.9.2"
platformdirs = "2.6.0"
poetry = "1.2.2"
poetry-core = "1.3.2"
poetry-plugin-export = "1.2.0"
psycopg2 = "2.9.3"
ptyprocess = "0.7.0"
pycparser = "2.21"
pyjwt = "2.6.0"
pylev = "1.4.0"
pyrsistent = "0.19.2"
python-dotenv = "0.21.0"
python3-openid = "3.2.0"
pytz = "2022.6"
pywin32-ctypes = "0.2.0"
pyyaml = "6.0"
requests = "2.28.1"
requests-oauthlib = "1.3.1"
requests-toolbelt = "0.9.1"
shellingham = "1.5.0"
six = "1.16.0"
sqlparse = "0.4.3"
tomlkit = "0.11.6"
tzdata = "2022.7"
uritemplate = "4.1.1"
urllib3 = "1.26.13"
virtualenv = "20.17.1"
webencodings = "0.5.1"
whitenoise = "5.3.0"
zipp = "3.11.0"
psycopg2-binary = "^2.9.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
